# podcasts

./: .gitignore  .pylintrc  TODO  alembic.ini  default.nix  feeds.py  flake.nix  gleam.toml  main.py  manifest.toml  module.nix  pyproject.toml  shell.nix  styles.css
alembic/: env.py
alembic/versions/: 20e538e132db_make_episode_link_nullable.py  c1365d9cf052_make_podcast_last_fetch_nullable.py
podcasts/: __init__.py  config.py  db.py  fetch.py  main.py  serve.py
podcasts/static/: styles.css
podcasts/templates/: export.opml  podcast.html  podcasts.html
src/: podcasts.gleam
src/podcasts/: config.gleam  db.gleam  edownload.gleam  err.gleam  render.gleam
templates/: podcast.html  podcasts.html
