[project]
name = "podcasts"
version = "0.1.0"
description = ""
authors = [{ name = "Peter Rice", email = "peter@peterrice.xyz" }]
license = { file = "LICENSE" }
requires-python = ">= 3.10"
dependencies = [
  "requests",
  "feedparser",
  "PyYAML",
  "dacite",
  "SQLAlchemy",
  "Flask",
  "Flask-HTTPAuth",
  "Flask-SQLAlchemy"
]

[project.scripts]
fetch-podcasts = "podcasts.fetch:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["podcasts"]

[tool.setuptools.package-data]
podcasts = ["static/*", "templates/*"]

[tool.ruff]
select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "N",
  "ANN",
  "S",
  "B",
  "C4",
  "SIM",
  "ARG",
]
target-version = "py310"
ignore = [
  "E501", # line too long
  "ANN101", # annotate self
  "ANN102", # annotate cls
]

[tool.pylsp-mypy]
strict = true
