[project]
name = "podcasts"
version = "0.1.0"
description = ""
authors = [{ name = "Peter Rice", email = "peter@peterrice.xyz" }]
license = { file = "LICENSE" }
requires-python = ">= 3.10"
dependencies = [
  "requests",
  "feedparser",
  "PyYAML",
  "dacite",
  "SQLAlchemy",
  "Flask",
  "Flask-HTTPAuth",
  "Flask-SQLAlchemy"
]

[project.scripts]
fetch-podcasts = "podcasts.fetch:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["podcasts"]

[tool.setuptools.package-data]
podcasts = ["static/*", "templates/*"]

[tool.ruff]
target-version = "py310"
lint.select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "N",
  "ANN",
  "S",
  "B",
  "C4",
  "SIM",
  "ARG",
  "PTH",
  "RUF",
]
lint.ignore = [
  "E501", # line too long
  "ANN101", # annotate self
  "ANN102", # annotate cls
  "S318", # don't parse arbitrary xml
  "S603", # ban subprocess.run
  "S607", # ban $PATH
]

[tool.pylsp-mypy]
strict = true
